@@ -2,9 +2,10 @@ Changes in 1.2.2
 ================
 
 Bugs fixed:
-- 1370764 Fixed query parser left unstable by mal-formed statement
 - 1668852 Fixed memory leak in interop provider
 - 1654313 Fixed http adapter segfaults on createinstance
+- 1370764 Fixed query parser left unstable by mal-formed statement
+- 1370752 Fixed query parser fails to recogonize single quotations
 
 Changes in 1.2.1
 ================
